# quenchxx

./: CMakeLists.txt  README.md
script/: check_diff_recursively.sh
src/: CMakeLists.txt
src/mains/: CMakeLists.txt  quenchxxConvertState.cc  quenchxxErrorCovarianceToolbox.cc  quenchxxGeometry.cc  quenchxxHofX3D.cc  quenchxxProcessPerts.cc
src/mains/ec/: quenchxxAssimEnsemble.cc  quenchxxAssimEnsemblePatched.cc  quenchxxBGOS.cc  quenchxxConvertState.cc  quenchxxEnsembleVariance.cc  quenchxxErrorCovarianceToolbox.cc  quenchxxEvilUpdate.cc  quenchxxHofX.cc  quenchxxLETKF.cc  quenchxxMakeObs.cc  quenchxxMakeObsPatched.cc  quenchxxProcessPerts.cc  quenchxxSyntheticData.cc  quenchxxVariational.cc
src/mains/jedi/: quenchxxHofX3D.cc  quenchxxLETKF.cc  quenchxxProcessPerts.cc  quenchxxVariational.cc
src/quenchxx/: .description.patch  CMakeLists.txt  CMakeLists.txt.patch  Constants.cc  Constants.h  Covariance.h  Covariance.h.patch  CovarianceParameters.h  Fields.cc  Fields.cc.patch  Fields.h  Fields.h.patch  GeoVaLs.cc  GeoVaLs.h  Geometry.cc  Geometry.cc.patch  Geometry.h  Geometry.h.patch  GeometryIterator.cc  GeometryIterator.h  HorizScaleDecomposition.h  HybridWeight.cc  HybridWeight.h  IncrEnsCtlVec.h  IncrModCtlVec.h  Increment.cc  Increment.cc.patch  Increment.h  Increment.h.patch  Interpolation.cc  Interpolation.cc.patch  Interpolation.h  Interpolator.h  LinearModel.cc  LinearModel.h  LinearObsOperator.cc  LinearObsOperator.h  LinearVariableChange.cc  LinearVariableChange.cc.patch  LinearVariableChange.h  (+62 more)
test/: CMakeLists.txt  ecmwf_compare.py
test/testdata/: camchem_N30x20_subset.nc
test/testinput/ec/: bgos_background.json  bgos_ensemble.json  bgos_linear_ensemble.json  bgos_linear_randomized.json  bgos_makeobs.json  bgos_nonlinear_ensemble.json  bgos_nonlinear_randomized.json  bgos_stddev.json  bgos_truth.json  evil_assim_ensemble.json  evil_background.json  evil_control_3dvar.json  evil_control_update_D.json  evil_control_update_R.json  evil_control_update_S.json  evil_dual_3dvar.json  evil_dual_update_D.json  evil_dual_update_R.json  evil_dual_update_S.json  evil_ensemble.json  evil_ensemble_variance.json  evil_makeobs.json  evil_primal_3dvar.json  evil_primal_update_D.json  evil_primal_update_R.json  evil_primal_update_S.json  evil_stddev.json  evil_truth.json  glb_3densvar.json  glb_3dvar.json  glb_4densvar.json  glb_background_06.json  glb_background_12.json  glb_background_18.json  glb_ensemble_06.json  glb_ensemble_12.json  glb_ensemble_18.json  glb_getkf_nonlinear.json  glb_hofx.json  glb_interfaces.json  (+42 more)
test/testinput/genint/: convertstate_nonuni_lonlat.yaml  convertstate_regular_lonlat.yaml  convertstate_varcha_nonuni_lonlat.yaml  convertstate_varcha_regular_lonlat.yaml  geometry_lambertCC.yaml  geometry_regular_lonlat.yaml  hofx3d_lambertCC.yaml  hofx3d_nonuni_lonlat.yaml  hofx3d_regular_lonlat.yaml
test/testinput/jedi/: genint_convertstate_nonuni_lonlat.yaml  genint_convertstate_regular_lonlat.yaml  genint_convertstate_varcha_nonuni_lonlat.yaml  genint_convertstate_varcha_regular_lonlat.yaml  genint_geometry_lambertCC.yaml  genint_geometry_regular_lonlat.yaml  genint_hofx3d_lambertCC.yaml  genint_hofx3d_nonuni_lonlat.yaml  genint_hofx3d_regular_lonlat.yaml  glb_3densvar.yaml  glb_3dvar.yaml  glb_4densvar.yaml  glb_background_06.yaml  glb_background_12.yaml  glb_background_18.yaml  glb_ensemble_06.yaml  glb_ensemble_12.yaml  glb_ensemble_18.yaml  glb_getkf_nonlinear.yaml  glb_letkf.yaml  glb_letkf_linear.yaml  glb_letkf_linear_4d.yaml  glb_letkf_nonlinear.yaml  glb_letkf_nonlinear_4d.yaml  glb_letkf_read_members.yaml  glb_makeobs_06.yaml  glb_makeobs_12.yaml  glb_makeobs_18.yaml  glb_stddev.yaml  glb_truth_06.yaml  glb_truth_12.yaml  glb_truth_18.yaml  reg_3densvar.yaml  reg_3dvar.yaml  reg_4densvar.yaml  reg_background_06.yaml  reg_background_12.yaml  reg_background_18.yaml  reg_ensemble_06.yaml  reg_ensemble_12.yaml  (+15 more)
test/testinput/synthetic/: glb_3densvar.yaml  glb_3dvar.yaml  glb_4densvar.yaml  glb_background_06.yaml  glb_background_12.yaml  glb_background_18.yaml  glb_ensemble_06.yaml  glb_ensemble_12.yaml  glb_ensemble_18.yaml  glb_letkf.yaml  glb_makeobs.yaml  glb_stddev.yaml  glb_truth_06.yaml  glb_truth_12.yaml  glb_truth_18.yaml  reg_3densvar.yaml  reg_3dvar.yaml  reg_4densvar.yaml  reg_background_06.yaml  reg_background_12.yaml  reg_background_18.yaml  reg_ensemble_06.yaml  reg_ensemble_12.yaml  reg_ensemble_18.yaml  reg_letkf.yaml  reg_makeobs.yaml  reg_stddev.yaml  reg_truth_06.yaml  reg_truth_12.yaml  reg_truth_18.yaml
test/testoutput/genint/: convertstate_nonuni_lonlat.ref  convertstate_varcha_regular_lonlat.ref  geometry_regular_lonlat.ref  hofx3d_lambertCC.ref  hofx3d_regular_lonlat.ref
test/testoutput/synthetic/: glb_3densvar.ref  glb_3dvar.ref  glb_4densvar.ref  glb_background_06.ref  glb_background_12.ref  glb_ensemble_06.ref  glb_letkf.ref  glb_makeobs.ref  glb_truth_06.ref  glb_truth_12.ref  reg_3densvar.ref  reg_3dvar.ref  reg_4densvar.ref  reg_background_18.ref  reg_ensemble_06.ref  reg_ensemble_18.ref  reg_letkf.ref  reg_makeobs.ref  reg_stddev.ref  reg_truth_06.ref  reg_truth_12.ref
test/testref/: glb_background_06.ref  glb_background_12.ref  glb_background_18.ref  glb_ensemble_06.ref  glb_ensemble_12.ref  glb_ensemble_18.ref  glb_makeobs_06.ref  glb_makeobs_12.ref  glb_makeobs_18.ref  glb_stddev.ref  glb_truth_06.ref  glb_truth_12.ref  glb_truth_18.ref  reg_background_06.ref  reg_background_12.ref  reg_background_18.ref  reg_ensemble_06.ref  reg_ensemble_12.ref  reg_ensemble_18.ref  reg_makeobs_06.ref  reg_makeobs_12.ref  reg_makeobs_18.ref  reg_stddev.ref  reg_truth_06.ref  reg_truth_12.ref  reg_truth_18.ref
test/testref/ec/: bgos_background.ref  bgos_linear_ensemble.ref  bgos_linear_randomized.ref  bgos_makeobs.ref  bgos_nonlinear_ensemble.ref  bgos_nonlinear_randomized.ref  evil_assim_ensemble.ref  evil_control_3dvar.ref  evil_control_update_D.ref  evil_control_update_R.ref  evil_dual_3dvar.ref  evil_dual_update_R.ref  (+54 more)
tools/: CMakeLists.txt  check_diff.sh  check_diff_recursively.sh  compare.py  ecmwf_compare.sh
(+60 files in other folders)
